tests/invalid/generated_binop_sub_none_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: bool = True
    z = x - y
